--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "wp-scripts start",
-    "build": "wp-scripts build"
+    "build": "wp-scripts build",
+    "deploy": "scp -r ./* yurizhjr_root@yurizhjr.beget.tech:/home/y/yurizhjr/alioffers.ru/public_html/wp-content/themes/alioffers"
   },
   "repository": {
     "type": "git",
